Fix arrows/title overlapping in tablesorter headers

--- a/share/html/NoAuth/css/base/tablesorter.css
+++ b/share/html/NoAuth/css/base/tablesorter.css
@@ -17,6 +17,7 @@ table.tablesorter thead tr .header {
 	background-repeat: no-repeat;
 	background-position: center right;
 	cursor: pointer;
+	padding-right: 20px;
 }
 table.tablesorter tbody td {
 	color: #3D3D3D;
